--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="year">Year</string>
     <string name="cvv">CVV</string>
     <string name="confirm_payment">Confirm Payment</string>
+    <string name="continue_shopping">Continue Shopping</string>
 </resources>
